<resources>
    <string name="app_name">Game App</string>
    <string name="discover">Discover</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="logout">Log out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="passwordDiffer">Given passwords differ</string>
    <string name="inputBlank">This field is required</string>
    <string name="wrongLoginPassword">Wrong email or password</string>
    <string name="userNotFound">User can not be found</string>
    <string name="userExists">This email is registered already</string>
    <string name="emailAsALogin">Type correct email as a login</string>
    <string name="weakPassword">Password is too weak</string>
    <string name="goBack">Back</string>
    <string name="createAccount">Create a new account</string>
    <string name="search">Search</string>
    <string name="searchResults">Search results</string>
    <string name="favourite">Favourite games</string>
    <string name="played">Finished games</string>
    <string name="newestGames">Newest games</string>
    <string name="bestGames">Best games</string>
    <string name="comingSoon">Coming soon</string>
    <string name="availablePlatforms">Available on platforms:</string>
    <string name="creators">Creators:</string>
    <string name="resetPassword">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="passwordSend">Password reset successfully</string>
    <string name="error">An error occurred. Try again</string>
    <string name="description">Description of the game:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>